# Zed-Ouster-based-Real-time-SMPL-Pose-and-Dynamic-Occupancy-Estimation

./: README.md
smpl_pose_estimation_dynamic_occupancy/: CMakeLists.txt  package.xml
smpl_pose_estimation_dynamic_occupancy/src/dynamic_occupancy/: dogma.py  segment.py
smpl_pose_estimation_dynamic_occupancy/src/pose_estimation/: skeleton-smpl.py  visualizer.py
smpl_pose_estimation_dynamic_occupancy/src/utils/: augmentations.py  autoanchor.py  benchmarks.py  dataloaders.py  general.py  loss.py  metrics.py  plots.py  pub3.py  torch_utils.py
